# 3333

./: .env  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 1ba393f232f6_create_initial_tables.py
src/: application.py  config.py  db.py  main.py
src/handlers/: appointment.py  doctor.py  insurance.py  med_card.py  med_servise.py  patient.py
src/healthcheck/: router.py
src/models/: appointment.py  association.py  base.py  doctor.py  insurance.py  med_card.py  med_models.py  med_service.py  patient.py  user.py
src/schemas/: appointment.py  association.py  doctor.py  insurance.py  med_card.py  med_schemas.py  med_service.py  patient.py
